# kerberos-ticket-watcher

./: .clang-format  .gitignore  0001-made-default-realm-the-first-one-in-list.patch  CMakeLists.txt  Changes  Makefile  News  README.md  TODO  krb5-ticket-watcher-1.0.2-alt-krb5-1.10.2.patch  krb5-ticket-watcher-1.0.3-alt-fix-desktop-category.patch  krb5-ticket-watcher.desktop  krb5-ticket-watcher.pro  krb5-ticket-watcher.spec
.gear/: alt-force-kinit.patch  alt-password-dialog-ontop.patch  alt-qt5-1.patch  alt-raise-password-dialog.patch  alt-tray-icon.patch  alt-wait-for-tray.patch  fix-deprecated-krb5-api-meth.patch  krb5-ticket-watcher-1.0-alt-date-fix.patch  krb5-ticket-watcher-1.0.3-alt-fix-desktop-category.patch  krb5-ticket-watcher-1.0.3-alt-fix-includes.patch  krb5-ticket-watcher-add-pw-exp-notif.patch  krb5-ticket-watcher.spec  ru.po  rules
.gear/tags/: list
.github/workflows/: action-cpp.yml
cmake/modules/: FindGettext.cmake  FindKRB5.cmake  FindVersionHeader.cmake
krb5-ticket-watcher/: CMakeLists.txt  Changes  Makefile  News  TODO  krb5-ticket-watcher.desktop  krb5-ticket-watcher.pro
krb5-ticket-watcher/po/: Makefile  ar.po  cs.po  de.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  krb5-ticket-watcher-0.1.pot  krb5-ticket-watcher.de.po  krb5-ticket-watcher.de.qm  krb5-ticket-watcher.de.ts  krb5-ticket-watcher.en.po  krb5-ticket-watcher.en.qm  krb5-ticket-watcher.en.ts  krb5-ticket-watcher.po  krb5-ticket-watcher.pot  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  uk.po  zh_CN.po  zh_TW.po
krb5-ticket-watcher/src/: TicketListItem.cpp  kinitdialog.cpp  kinitdialog.h  kinitdialog.ui  kinitdialog.ui.h  krb5ticketwatcher.cpp  krb5ticketwatcher.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwidget.ui.h  pwchangedialog.h  pwdialog.h  pwdialog.ui  trayicon_x11.cpp  v5.cpp  v5.h
krb5-ticket-watcher/tmp/: CMakeLists.txt  Changes  TODO  kinitdialog.h  krb5-ticket-watcher.pro  krb5_tw_gettext.h  pwchangedialog.h  pwdialog.h
krb5-ticket-watcher/tmp/gpo/: CMakeLists.txt  createPot
po/: .gitignore  CMakeLists.txt  Makefile  af.po  ar.po  ast.po  be.po  bg.po  bn.po  bs.po  ca.po  createPot  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  km.po  ko.po  krb5-ticket-watcher-0.1.po  krb5-ticket-watcher.de.po  (+38 more)
rc/: CMakeDMGBackground.tif  CMakeDMGSetup.scpt  icons.qrc  krb5-ticket-watcher.icns
src/: KtwOptions.cpp  KtwOptions.h  TicketListItem.cpp  TicketListItem.h  keychainclass.cpp  keychainclass.h  kinitdialog.cpp  kinitdialog.h  kinitdialog.ui  krb5_tw_gettext.h  krb5ccache.cpp  krb5ccache.h  krb5context.cpp  krb5context.h  krb5creds.cpp  krb5creds.h  krb5credsopts.cpp  krb5credsopts.h  krb5cursor.cpp  krb5cursor.h  krb5exception.cpp  krb5exception.h  krb5fwd.h  krb5principal.cpp  krb5principal.h  krb5ticket.cpp  krb5ticket.h  krb5ticketwatcher.cpp  krb5ticketwatcher.h  krb5timestamphelper.cpp  krb5timestamphelper.h  ldapinfo.cpp  ldapinfo.h  main.cpp  mainwidget.ui  pwchangedialog.cpp  pwchangedialog.h  pwchangedialog.ui  pwdialog.cpp  pwdialog.h  (+8 more)
